--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:diversario/node-ssdp.git"
+    "url": "git@github.com:mespiritu/node-ssdp.git"
   },
   "bugs": {
     "url": "https://github.com/diversario/node-ssdp/issues"
